
- Fixed IceGrid bug where node observers would not be notified when a
  server is re-enabled after it has been updated and if the server was
  disabled following an activation failure.

- Fixed a bug in the Glacier2.SessionFactoryHelper class (Java/C#) in
  which the getPort() method would return an incorrect default port if
  no port was configured.


C++ Changes
===========

- slice2cpp now generates a "one-shot" constructor for a Slice
  structure if at least one of its members has a default value.

- Fixed a bug in slice2cpp so that asynchronous "end_op" methods are
  now exported properly.

- Fixed a bug in slice2cpp that would generate invalid code for a
  Slice exception when the --stream option was not used.

- Fixed compatibility issues with OpenSSL 1.0.

- Fixed a bug in slice2cpp that would cause invalid code to be
  generated for a nested Slice definition when the --stream option was
  used.

- Fixed a bug in Freeze that disabled automatic log deletion.


Java Changes
============

- Fixed a bug in the Slice2Java ant task in which duplicate Slice
  files could be passed to slice2java. Also fixed a bug in slice2java
  that caused the translator to fail if a duplicate file was passed
  on the command line.

- Fixed race condition which could cause the thread pool selector
  thread to go away (causing the thread pool to not dispatch further
  incoming messages).

- Deprecated Ice.AsyncCallback. To use the generic asynchronous
  callback facility, applications should derive their classes from
  Ice.Callback.


C# Changes
==========

- Fixed a bug in the generated code that prevented sequences from
  being marshaled using the stream API if the sequences used generic
  collection types.

- Fixed a bug in the IceSSL plug-in that could incorrectly report a
  certificate verification failure when the IceSSL.CheckCertName
  property is enabled.


Python Changes
==============

- Fixed a bug in which destroyed Communicator instances were not being