@@ -132,4 +132,40 @@ module Sub
 };
 };
 
+module Test2
+{
+module Sub2
+{
+    enum NestedEnum2
+    {
+        nestedEnum4,
+        nestedEnum5,
+        nestedEnum6
+    };
+
+    struct NestedStruct2
+    {
+        bool bo;
+        byte by;
+        short sh;
+        int i;
+        long l;
+        float f;
+        double d;
+        string str;
+        NestedEnum2 e;
+    };
+
+    ["cpp:class"] struct NestedClassStruct2
+    {
+        int i;
+    };
+
+    exception NestedException2
+    {
+        string str;
+    };
+};
+};
+
 #endif
